--- a/index.html
+++ b/index.html
@@ -877,7 +877,10 @@
 				<div class="col-md-12 text-center">
 					<div class="header-text">
 						<h2>Mawada Ahmed Adam</h2>
-						<p>Medical content creator | Social Media Specialist</p>
+						<p>Content Creator 
+Medical Content Creator 
+Content /Script Writing 
+ Social Media Specialist</p>
 						<div class="contact-info">
 							<div class="contact-item">
 								<i class="fas fa-phone"></i>
