--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
 						<p>Content Creator 
 Medical Content Creator 
 Content /Script Writing 
- Social Media Specialist</p>
+ Social Media Specialist | Medical articles writer</p>
 						<div class="contact-info">
 							<div class="contact-item">
 								<i class="fas fa-phone"></i>
